[gd_scene load_steps=9 format=1]

[ext_resource path="res://HexagonMode.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/BackgroundTitle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/OriginalButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/OriginalButton2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/BiggermapButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/BiggermapButton_Click.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/NofileButton.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Backbutton.png" type="Texture" id=8]

[node name="HexagonMode" type="Node2D"]

script/script = ExtResource( 1 )

[node name="BackgroundTitle" type="Sprite" parent="."]

transform/pos = Vector2( 512.157, 304.74 )
transform/scale = Vector2( 1.35984, 1.40174 )
texture = ExtResource( 2 )

[node name="Original" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 262.0
margin/top = 35.0
margin/right = 744.0
margin/bottom = 178.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Original1" type="TextureButton" parent="."]

rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 260.0
margin/top = 248.0
margin/right = 692.0
margin/bottom = 278.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="NofileButton1" type="Sprite" parent="."]

transform/pos = Vector2( 498.922, 521.319 )
texture = ExtResource( 7 )

[node name="Back" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 871.0
margin/top = 529.0
margin/right = 1024.0
margin/bottom = 601.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0

[connection signal="pressed" from="Original" to="." method="_on_Original_pressed"]

[connection signal="pressed" from="Original1" to="." method="_on_Original1_pressed"]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]


